--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -196,11 +196,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,7 +219,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 👨🏻‍💻 - Plot the 4 dataframes in a 2x2 grid using Matplotlib\n"
+    "# 👨🏻‍💻 - Plot the 4 dataframes in a 2x2 grid using Matplotlib\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "\n",
+    "# Plot df1\n",
+    "axs[0, 0].scatter(df1['x'], df1['y'])\n",
+    "axs[0, 0].set_title('Dataset I')\n",
+    "axs[0, 0].set_xlabel('x')\n",
+    "axs[0, 0].set_ylabel('y')\n",
+    "\n",
+    "# Plot df2\n",
+    "axs[0, 1].scatter(df2['x'], df2['y'])\n",
+    "axs[0, 1].set_title('Dataset II')\n",
+    "axs[0, 1].set_xlabel('x')\n",
+    "axs[0, 1].set_ylabel('y')\n",
+    "\n",
+    "# Plot df3\n",
+    "axs[1, 0].scatter(df3['x'], df3['y'])\n",
+    "axs[1, 0].set_title('Dataset III')\n",
+    "axs[1, 0].set_xlabel('x')\n",
+    "axs[1, 0].set_ylabel('y')\n",
+    "\n",
+    "# Plot df4\n",
+    "axs[1, 1].scatter(df4['x'], df4['y'])\n",
+    "axs[1, 1].set_title('Dataset IV')\n",
+    "axs[1, 1].set_xlabel('x')\n",
+    "axs[1, 1].set_ylabel('y')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -234,11 +258,6 @@
    "source": [
     "**❓ What do you notice and what does this mean?**"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
