--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -316,7 +316,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iris_df.info()"
+   ]
   },
   {
    "attachments": {},
@@ -924,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.1"
   },
   "nav_menu": {
    "height": "279px",
