--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -333,7 +333,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iris_df.sample(6)"
+   ]
   },
   {
    "cell_type": "markdown",
