--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -614,7 +614,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a bubble plot using Seaborn to show the relationship between sepal_length and sepal_width\n",
+    "# with the size of the dots determined by petal width and color by species type\n",
+    "\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.scatterplot(data=iris_df, x='sepal length (cm)', y='sepal width (cm)', \n",
+    "                size='petal width (cm)', hue='target', palette='viridis', alpha=0.5, sizes=(20, 200))\n",
+    "plt.title('Bubble Plot: Sepal Length vs Sepal Width (Size by Petal Width, Color by Species)')\n",
+    "plt.xlabel('Sepal Length (cm)')\n",
+    "plt.ylabel('Sepal Width (cm)')\n",
+    "plt.legend(title='Species', labels=species_names)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
