--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -649,7 +649,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = px.scatter(iris_df, x='sepal length (cm)', y='sepal width (cm)', \n",
+    "                 size='petal width (cm)', color='target', \n",
+    "                 hover_name='target', \n",
+    "                 labels={'target': 'Species'},\n",
+    "                 title='Bubble Plot: Sepal Length vs Sepal Width (Size by Petal Width, Color by Species)',\n",
+    "                 color_continuous_scale=px.colors.sequential.Viridis)\n",
+    "\n",
+    "# Update the color bar to show species names\n",
+    "fig.update_coloraxes(colorbar=dict(tickvals=[0, 1, 2], ticktext=species_names))\n",
+    "\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
