--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -707,7 +707,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Print the last three records of the dataset bitcoin_df\n",
+    "bitcoin_df.tail(3)"
+   ]
   },
   {
    "attachments": {},
@@ -731,7 +734,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 👨🏻‍💻 - Plot the bitcoin price over time, with a wide figure size\n"
+    "# 👨🏻‍💻 - Plot the bitcoin price over time, with a wide figure size\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "plt.plot(bitcoin_df['date'], bitcoin_df['value'])\n",
+    "plt.title('Bitcoin Price Over Time')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Price (USD)')\n",
+    "plt.show()\n"
    ]
   },
   {
