--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -769,7 +769,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "fig = px.line(bitcoin_df, x='date', y='value', title='Bitcoin Price Over Time')\n",
+    "fig.update_layout(xaxis_title='Date', yaxis_title='Price (USD)')\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
