--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -828,7 +828,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "# Melt the dataframe to long format\n",
+    "babies_long_df = babies_wide_df.melt(id_vars='year', var_name='name', value_name='count')\n",
+    "\n",
+    "# Create the stacked area chart\n",
+    "fig = px.area(babies_long_df, x='year', y='count', color='name', \n",
+    "              title='Evolution of the Popularity of Names Over Time',\n",
+    "              labels={'year': 'Year', 'count': 'Count', 'name': 'Name'})\n",
+    "\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
