--- a/visualization-notebook.ipynb
+++ b/visualization-notebook.ipynb
@@ -919,7 +919,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"A Sankey Diagram is a visualisation technique that allows to display flows. Several entities (nodes) are represented by rectangles or text. Their links are represented with arrows or arcs that have a width proportional to the importance of the flow.\" ([Data to Viz - Sankey Diagrams](https://www.data-to-viz.com/graph/sankey.html))\n",
+    "\n",
+    "**✨ Extra Credit Task 👨🏻‍💻**: For 3 Points: Follow [this tutorial](https://www.python-graph-gallery.com/sankey-diagram-with-python-and-plotly) on how to create a Sankey Diagram using `plotly`."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -945,7 +949,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# Define the Sankey diagram nodes and links\n",
+    "nodes = dict(\n",
+    "    label=['Amanda', 'Ashley', 'Betty', 'Deborah', 'Dorothy', 'Helen', 'Linda', 'Patricia'],\n",
+    "    pad=15,\n",
+    "    thickness=20,\n",
+    "    line=dict(color='black', width=0.5)\n",
+    ")\n",
+    "\n",
+    "links = dict(\n",
+    "    source=[0, 1, 2, 3, 4, 5, 6, 7],\n",
+    "    target=[1, 2, 3, 4, 5, 6, 7, 0],\n",
+    "    value=[10, 20, 30, 40, 50, 60, 70, 80]\n",
+    ")\n",
+    "\n",
+    "# Create the Sankey diagram\n",
+    "fig = go.Figure(data=[go.Sankey(node=nodes, link=links)])\n",
+    "\n",
+    "# Update the layout\n",
+    "fig.update_layout(title_text='Sankey Diagram Example', font_size=10)\n",
+    "\n",
+    "# Show the figure\n",
+    "fig.show()"
+   ]
   },
   {
    "attachments": {},
